2020-09-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_event.c: Replace macro Current_PlaceList with
      geda_struct_place_get_place_list in i_event_paster_pressed.

    * src/object/o_buffer.c: Revise debug output in o_buffer_paste_start.

    * src/object/o_redraw.c: Utilize defined LAST_DRAWB_MODE_NONE.

2020-09-29 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_buffer.c: Add pointer to toplevel in o_buffer_paste_start,
      utilize geda_struct_place_append_place_list to replace Current_PlaceList.

    * src/x/x_event.c: Replace Current_PlaceList geda_struct_place_get_place_list
      in x_event_button_released.

2020-09-28 Wiley E. Hill <wileyhill@gmail.com>

    * include/gschem_macros.h: Relocate function styled macros from
      gschem_globals.h.

    * src/iface/i_command.c: Add function documentation:

        * set_last_command
        * i_command_dispatch

    * src/object/o_text.c: Revise function o_text_prepare_place to utilize
      geda_struct_place_append_place_list insead of accessing the place list
      directly.

2020-09-26 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/el.po: Update Greek translations
    * po/es.po: Update Spanish translations.
    * po/fa.po: Update Persian translations.
    * po/fi.po: Update Finnish translations.
    * po/fr.po: Update French translations.
    * po/it.po: Update Italian translations.

2020-09-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_confirm_close.c: Revise confirm_close_dialog_constructor to
      create button for the action area seperately so that tooltips can be
      added.

2020-09-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_confirm_close.c: Revise confirm_close_dialog_constructor; wait
      until widgets are assembled before showing. Revise close confirmation
      message.

    * src/x/x_settings_dialog.c: Add missing mnemonic to the save button.
