@@ -3,6 +3,8 @@
     * src/iface/i_event.c: Replace macro Current_PlaceList with
       geda_struct_place_get_place_list in i_event_paster_pressed.
 
+    * src/object/*.c: Fix and update copyrights dates.
+
     * src/object/o_buffer.c: Revise debug output in o_buffer_paste_start.
 
     * src/object/o_redraw.c: Utilize defined LAST_DRAWB_MODE_NONE.
